--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "keycloak-js": "^26.2.1",
     "vue": "^3.3.4",
     "vue-router": "^4.6.3"
   },
